Mon Nov 26 08:58:25 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec_usb.c: Add new 'phoenix' subdriver, since it seems
   to drift away from what is needed by the 'agiler' subdriver.

Sun Nov 25 19:48:22 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplitesu.c: Add debugging code to help diagnose driver
   problems.

Sun Nov 25 18:59:33 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec.c: Fix counting detection attempts. Don't flush
   input- and output buffers before sending any command (too verbose
   for the USB subdrivers).
 - drivers/megatec_usb.c: Padding to 8 characters for commands send
   through set_data_agiler(). Apparently, some devices need that.

Sun Nov 25 11:44:58 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec.c: Limit detection of UPS to minimum required number
   of successful attempts. Flush input- and output buffers before sending
   any command.

Sun Nov 25 10:53:38 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec_usb.c, scripts/hal/20-ups-nut-device.fdi: Added
   Mustek Powermust as supported through 'megatec_usb' driver.

Mon Nov  5 20:21:45 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/nitram.c: Added experimental flag to this driver because it
   lacks support to shutdown the UPS.

Sun Nov  4 20:08:53 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hidparser.c: Fix non-portable type conversions.

Fri Nov  2 06:48:57 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: merged all functionality of get_data_krauler
   to set_data_krauler thus removing most sources of code duplication
   in krauler subdriver.

Thu Oct 18 17:51:07 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/drivers.list: add Belkin F6H375-USB compatibility through
   megatec_usb (depending on vendorid)

Mon Oct 15 11:14:06 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>
